frontend/src/components/navbar/Navbar.css
.navbar {
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: 0.7rem;
  z-index: 1000;

  /* background-color: red; */
}

.navbar-logo {
  font-size: 1.5rem;
  color: white;
  margin-left: 1rem;
  font-weight: 600;
  /* background-color: blue; */
  height: 100%;
  cursor: pointer;
}

.navbar-logo:hover {
  transform: scale(1.03);
}

.navbar-links {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  color: white;
}

.navbar-links a {
  position: relative;
  margin: 0 1rem;
  text-decoration: none;
  color: inherit;
  font-size: 1.2rem;
}

.navbar-links a::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -2px;
  left: 0;
  background-color: white;
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.3s ease-in-out;
}

.navbar-links a:hover::after {
  transform: scaleX(1);
}

.navbar-links a.active::after {
  transform: scaleX(1);
  transform-origin: left;
}

